overlay image responsive ok

--- a/styles/style.css
+++ b/styles/style.css
@@ -342,7 +342,7 @@ line-height: normal;
 .corner-img{
   max-width: 300px;
 
-
+}
   /* .icons-section{
     display: grid;
     grid-template-columns: repeat(4,1fr);
