--- a/styles/style.css
+++ b/styles/style.css
@@ -168,6 +168,66 @@ button > i {
   align-items: center;
   gap: 10px;
 }
+.container {
+  position: relative;
+  width: 100%;
+  max-width: 400px;
+}
+
+.image {
+  width: 100%;
+  height: auto;
+}
+
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom:110px;
+  left: 0;
+  right: 0;
+  height: auto;
+  width: 100%;
+  opacity: 0;
+  transition: .3s ease;
+  background-color: rgba(122, 118, 118, 0.431);
+  border-radius: 15px;
+}
+
+
+.container:hover .overlay {
+  opacity: 1;
+}
+
+.icon {
+  color: white;
+  font-size: 100px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+.overlay-text{
+text-align: center;
+  text-decoration:none;
+  font-size: 30px;
+}
+
+.fa-circle-play:hover {
+  color: #eee;
+}
+.online-games{
+  display: flex;
+  justify-content: space-evenly;
+  gap: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+
+
 
 /* play section start */
 .play-section {
@@ -332,8 +392,10 @@ cursor: pointer;
     height: 350px;
     width: 400px;
   }
-  .rectangle-img {
-    flex-direction: column;
+  .online-games{
+   display: grid;
+   grid-template-columns: repeat(1 ,1fr);
+   gap: 20px;
   }
   .play-section {
     flex-direction: column;
@@ -342,8 +404,8 @@ cursor: pointer;
     text-align: center;
   }
 
-  .overlay {
-    padding: 550px;
+  .overlay-container{
+    /* padding: 550px; */
   }
   /* .overlay-img{ */
   /* width: 300px; */
@@ -397,9 +459,11 @@ cursor: pointer;
   .banner-container {
     flex-direction: column;
   }
-  .rectangle-img {
+  .online-games {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    height: 100%;
   }
 
   .play-section {
